--- a/packages/feature-applications/package.json
+++ b/packages/feature-applications/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "type": "module",
-  "main": "./src/index.ts",
-  "exports": { ".": "./src/index.ts" },
+  "main": "./src/index.tsx",
+  "exports": { ".": "./src/index.tsx" },
   "dependencies": {
     "@career-copilot/core": "workspace:*",
     "@career-copilot/ui": "workspace:*",
