--- a/packages/feature-interviews/package.json
+++ b/packages/feature-interviews/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@career-copilot/feature-resume-studio",
+  "name": "@career-copilot/feature-interviews",
   "version": "0.1.0",
   "private": true,
   "type": "module",
@@ -12,6 +12,7 @@
     "react": "^18.3.1",
     "react-router-dom": "^6.22.3",
     "zustand": "^4.5.2",
-    "lucide-react": "^0.378.0"
+    "lucide-react": "^0.378.0",
+    "recharts": "^2.12.7"
   }
 }
