fix(backend,app): unify DB path, lockfile copy, and draft label parsing

--- a/packages/app/Dockerfile
+++ b/packages/app/Dockerfile
@@ -5,6 +5,7 @@ WORKDIR /app
 
 # Copy workspace config
 COPY pnpm-workspace.yaml ./
+COPY pnpm-lock.yaml ./
 COPY package.json ./
 COPY .npmrc ./
 COPY tsconfig.base.json ./
