--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,4 @@
 services:
-  browser:
-    image: selenium/standalone-chromium:latest
-    shm_size: 2gb
-    ports:
-      - "7900:7900"
-    environment:
-      - SE_VNC_NO_PASSWORD=1
-      - SE_START_VNC=true
-      - SE_START_NO_VNC=true
-      - SE_BROWSER_ARGS_REMOTE_DEBUG=--remote-debugging-port=9222
-      - SE_BROWSER_ARGS_REMOTE_DEBUG_ADDR=--remote-debugging-address=0.0.0.0
-      - SE_BROWSER_ARGS_NO_SANDBOX=--no-sandbox
-      - SE_BROWSER_ARGS_DISABLE_DEV_SHM=--disable-dev-shm-usage
-
   frontend:
     build:
       context: .
@@ -28,11 +14,11 @@ services:
       dockerfile: Dockerfile
     ports:
       - "8000:8000"
-    depends_on:
-      - browser
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     environment:
-      - APPLICATION_CDP_ENDPOINT=http://browser:9222
-      - DISCOVERY_BROWSER_CDP_ENDPOINT=http://browser:9222
+      - APPLICATION_CDP_ENDPOINT=http://host.docker.internal:9222
+      - DISCOVERY_BROWSER_CDP_ENDPOINT=http://host.docker.internal:9222
     volumes:
       - sqlite_data:/app/data
     healthcheck:
