--- a/packages/app/nginx.conf
+++ b/packages/app/nginx.conf
@@ -14,6 +14,10 @@ server {
         proxy_pass http://backend:8000/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
+        proxy_connect_timeout 30s;
+        proxy_send_timeout 300s;
+        proxy_read_timeout 300s;
+        send_timeout 300s;
     }
 
     # Cache static assets
